--- a/Basics/src/style/base.scss
+++ b/Basics/src/style/base.scss
@@ -2,3 +2,8 @@ body {
   margin: 0px;
   font-family: 'Roboto Condensed', sans-serif;
 }
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
