Added some more styles to the main portfolio page, button styles, started working on authentication and login page

--- a/Basics/src/style/base.css
+++ b/Basics/src/style/base.css
@@ -2,4 +2,11 @@ body {
   margin: 0px;
   font-family: 'Roboto Condensed', sans-serif;
 }
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+}
 /*# sourceMappingURL=base.css.map */
