--- a/Basics/src/style/navigation.scss
+++ b/Basics/src/style/navigation.scss
@@ -8,10 +8,9 @@
   }
 
   .nav-link-wrapper {
-    height: 22px;
+    // height: 22px;
     border-bottom: 1px solid transparent;
     transition: 0.5s ease-in-out;
-
     margin-right: 20px;
     text-transform: uppercase;
     font-size: 0.9rem;
