Added a few more categories to the selectable options and made them more geared towards coding. Also added ability to edit portfolio items (still a work in progress as photo functionality is not yet integrated

--- a/Basics/src/style/portfolio.scss
+++ b/Basics/src/style/portfolio.scss
@@ -1,6 +1,13 @@
 .portfolio-items-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  .filter-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .portfolio-items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
   .portfolio-item-wrapper {
     position: relative;
